collector/platform/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: collector
spec:
  selector:
    app: collector
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
